--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
     </script>
 
     <!-- FOOTER -->
-    <footer class="bg-[#66a6da] text-white text-center py-6 mt-12">
-        <p>&copy; 2025 Psicología & Bienestar. Todos los derechos reservados.</p>
+    <footer class="bg-[#66a6da] text-white text-center py-4">
+        <p class="font-sego">Psicología & Bienestar © 2025. Todos los derechos reservados.</p>
     </footer>
 
     <!-- Script -->
@@ -327,8 +327,27 @@
         }
     </script>
 
+    <!-- WhatsApp flotante -->
+    <a href="https://wa.me/573164603881" target="_blank"
+        class="fixed bottom-6 right-6 flex items-center bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-4 rounded-full shadow-lg transition transform hover:scale-105 z-50">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/whatsapp.png" class="mr-2" alt="WhatsApp Icon" />
+        Escríbenos por WhatsApp
+    </a>
 
+    <!-- Redes sociales laterales -->
+    <div class="fixed top-1/3 left-0 z-40 space-y-3 p-2">
+        <!-- Instagram -->
+        <a href="https://www.instagram.com/serviciospsicobienestar?utm_source=qr&igsh=NmtoOWFqMnZwMHY1" target="_blank"
+            class="block bg-gradient-to-tr from-pink-500 via-red-500 to-yellow-500 rounded-r-full p-2 shadow-md hover:scale-110 transition">
+            <img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="Instagram Icon" />
+        </a>
 
+        <!-- Facebook -->
+        <a href="https://www.facebook.com/share/1A9WZs7XCb/" target="_blank"
+            class="block bg-blue-600 rounded-r-full p-2 shadow-md hover:scale-110 transition">
+            <img src="https://img.icons8.com/ios-filled/24/ffffff/facebook-new.png" alt="Facebook Icon" />
+        </a>
+    </div>
 
 </body>
 
