--- a/index.html
+++ b/index.html
@@ -327,39 +327,48 @@
         }
     </script>
 
-    <!-- BOTÓN DE WHATSAPP FLOTANTE -->
-    <a href="https://wa.me/573164603881" target="_blank"
-        class="fixed bottom-6 right-6 group flex items-center space-x-2 bg-[#25D366] hover:bg-green-600 text-white px-4 py-3 rounded-full shadow-lg transition-all duration-300 z-50">
-        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/whatsapp.svg" alt="WhatsApp" class="w-6 h-6" />
-        <span class="whitespace-nowrap opacity-0 group-hover:opacity-100 transition-opacity duration-300">Escríbenos por
-            WhatsApp</span>
-    </a>
-
-    <!-- ICONOS REDES SOCIALES LATERALES -->
-    <div class="fixed top-1/3 left-0 z-50 space-y-4 p-1">
-        <!-- Facebook -->
-        <a href="https://www.facebook.com/share/1A9WZs7XCb/" target="_blank"
-            class="group relative flex items-center space-x-2 bg-blue-600 p-2 rounded-r-full hover:bg-blue-700 transition">
-            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/facebook.svg" alt="Facebook"
-                class="w-6 h-6 text-white" />
+    <!-- REDES SOCIALES LATERALES -->
+    <div class="fixed top-1/3 left-0 z-40 flex flex-col space-y-3 px-2">
+        <!-- Instagram -->
+        <a href="https://www.instagram.com/serviciospsicobienestar?utm_source=qr&igsh=NmtoOWFqMnZwMHY1" target="_blank"
+            class="group relative flex items-center">
+            <div class="bg-pink-500 hover:bg-pink-600 p-3 rounded-r-full shadow-lg transition duration-300">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/instagram.svg" alt="Instagram"
+                    class="w-5 h-5" />
+            </div>
             <span
-                class="absolute left-10 opacity-0 group-hover:opacity-100 bg-white text-gray-800 px-3 py-1 rounded shadow transition-all duration-300 text-sm">
-                Visita nuestro Facebook
+                class="absolute left-12 bg-pink-500 text-white text-xs px-3 py-1 rounded shadow-lg opacity-0 scale-0 group-hover:opacity-100 group-hover:scale-100 transform transition-all duration-300 origin-left whitespace-nowrap">
+                Visita nuestro Instagram
             </span>
         </a>
 
-        <!-- Instagram -->
-        <a href="https://www.instagram.com/serviciospsicobienestar?utm_source=qr&igsh=NmtoOWFqMnZwMHY1" target="_blank"
-            class="group relative flex items-center space-x-2 bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 p-2 rounded-r-full hover:brightness-110 transition">
-            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/instagram.svg" alt="Instagram"
-                class="w-6 h-6 text-white" />
+        <!-- Facebook -->
+        <a href="https://www.facebook.com/share/1A9WZs7XCb/" target="_blank" class="group relative flex items-center">
+            <div class="bg-blue-600 hover:bg-blue-700 p-3 rounded-r-full shadow-lg transition duration-300">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/facebook.svg" alt="Facebook"
+                    class="w-5 h-5" />
+            </div>
             <span
-                class="absolute left-10 opacity-0 group-hover:opacity-100 bg-white text-gray-800 px-3 py-1 rounded shadow transition-all duration-300 text-sm">
-                Síguenos en Instagram
+                class="absolute left-12 bg-blue-600 text-white text-xs px-3 py-1 rounded shadow-lg opacity-0 scale-0 group-hover:opacity-100 group-hover:scale-100 transform transition-all duration-300 origin-left whitespace-nowrap">
+                Visita nuestro Facebook
             </span>
         </a>
     </div>
 
+    <!-- BOTÓN FLOTANTE WHATSAPP -->
+    <a href="https://wa.me/573164603881" target="_blank" class="fixed bottom-6 right-6 z-50 group">
+        <div
+            class="relative flex items-center justify-center bg-[#25D366] hover:bg-green-600 w-14 h-14 rounded-full shadow-lg transition-colors duration-300">
+            <!-- Ícono WhatsApp -->
+            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/whatsapp.svg" alt="WhatsApp"
+                class="w-7 h-7 text-white" />
+            <!-- Tooltip WhatsApp -->
+            <span
+                class="absolute right-16 bg-[#25D366] text-white text-sm px-3 py-1 rounded-lg shadow-lg opacity-0 scale-0 group-hover:opacity-100 group-hover:scale-100 transform transition-all duration-300 origin-right whitespace-nowrap">
+                Escríbenos por WhatsApp
+            </span>
+        </div>
+    </a>
 
 </body>
 
