--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
 
             <!-- Menú de navegación -->
             <nav id="menu" class="hidden md:flex space-x-4 text-sm font-semibold">
-                <a href="#inicio" class="hover:underline">Inicio</a>
+                <a href="index.html" class="hover:underline">Inicio</a>
                 <a href="#nosotros" class="hover:underline">Nosotros</a>
                 <a href="#servicios" class="hover:underline">Servicios</a>
                 <a href="#equipo" class="hover:underline">Equipo</a>
-                <a href="#contacto" class="hover:underline">Contacto</a>
+                <a href="#contactForm" class="hover:underline">Contacto</a>
             </nav>
         </div>
 
         <!-- Menú desplegable en móviles -->
         <div id="mobile-menu" class="md:hidden hidden bg-[#66a6da] px-4 pb-4">
-            <a href="#inicio" class="block py-2 hover:underline">Inicio</a>
+            <a href="index.html" class="block py-2 hover:underline">Inicio</a>
             <a href="#nosotros" class="block py-2 hover:underline">Nosotros</a>
             <a href="#servicios" class="block py-2 hover:underline">Servicios</a>
             <a href="#equipo" class="block py-2 hover:underline">Equipo</a>
-            <a href="#contacto" class="block py-2 hover:underline">Contacto</a>
+            <a href="#contactForm" class="block py-2 hover:underline">Contacto</a>
         </div>
     </header>
 
@@ -121,7 +121,7 @@
     <!-- NOSOTROS -->
     <section class="py-16 bg-[#f0f8ff]">
         <div class="max-w-4xl mx-auto text-center">
-            <h2 class="text-3xl font-bold text-[#627eff] mb-4">Sobre Nosotros</h2>
+            <h2 class="text-3xl font-bold text-[#627eff] mb-4" id="nosotros">Sobre Nosotros</h2>
             <p class="text-gray-700">
                 Somos un equipo de profesionales comprometidos con tu salud mental. Nuestra misión es acompañarte en el
                 proceso de autoconocimiento y bienestar, a través de un enfoque humano, empático y basado en evidencia
