--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -47,7 +47,7 @@
                 <a href="#nosotros" class="hover:underline">Nosotros</a>
                 <a href="#servicios" class="hover:underline">Servicios</a>
                 <a href="#equipo" class="hover:underline">Equipo</a>
-                <a href="#contacto" class="hover:underline">Contacto</a>
+                <a href="#contactForm" class="hover:underline">Contacto</a>
             </nav>
         </div>
 
@@ -57,7 +57,7 @@
             <a href="#nosotros" class="block py-2 hover:underline">Nosotros</a>
             <a href="#servicios" class="block py-2 hover:underline">Servicios</a>
             <a href="#equipo" class="block py-2 hover:underline">Equipo</a>
-            <a href="#contacto" class="block py-2 hover:underline">Contacto</a>
+            <a href="#contactForm" class="block py-2 hover:underline">Contacto</a>
         </div>
     </header>
 
